@@ -4,10 +4,12 @@ PREFIX=/usr/local
 INSTDIR=$(DESTDIR)/$(PREFIX)/bin
 MANDIR=$(DESTDIR)/$(PREFIX)/man
 
-CC = g++
-LD = g++
+## CC = g++
+## LD = g++
+CC = clang++
+LD = clang++
 
-EXECS = sg_tst_excl sg_tst_excl2 sg_tst_excl3
+EXECS = sg_tst_excl sg_tst_excl2 sg_tst_excl3 sg_tst_context
 
 EXTRAS =
 
@@ -48,6 +50,9 @@ sg_tst_excl2: sg_tst_excl2.o $(LIBFILESNEW)
 	$(LD) -o $@ $(LDFLAGS) $^
 
 sg_tst_excl3: sg_tst_excl3.o $(LIBFILESNEW)
+	$(LD) -o $@ $(LDFLAGS) $^
+
+sg_tst_context: sg_tst_context.o $(LIBFILESNEW)
 	$(LD) -o $@ $(LDFLAGS) $^
 
 install: $(EXECS)
