@@ -23,8 +23,7 @@ CFLAGS_PTHREADS = -D_REENTRANT
 
 # there is no rule to make the following in the parent directory,
 # it is assumed they are already built.
-D_FILES = ../sg_lib.o ../sg_lib_data.o ../sg_pt_freebsd.o
-O_FILES = sg_lib.o sg_lib_data.o sg_pt_freebsd.o
+D_FILES = ../lib/sg_lib.o ../lib/sg_lib_data.o ../lib/sg_pt_freebsd.o
 
 LDFLAGS = -lcam
 # LDFLAGS = -v -lm
