@@ -2,7 +2,7 @@ sg3-utils (1.38-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 10 Nov 2013 19:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 19 Nov 2013 11:00:00 -0500
 
 sg3-utils (1.37-0.1) unstable; urgency=low
 
