@@ -2,13 +2,14 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20131110] [svn: r531]
+Changelog for sg3_utils-1.38 [20131119] [svn: r532]
   - sg_ses: add --dev-slot-num= and --sas-addr=
   - sg_inq: add --block=0|1 option to control opens
   - sg_luns: guard against garbage response
-  - sg_lib_data: sync asc/ascq codes with T10 dated 20131008
+  - sg_lib_data: sync asc/ascq codes with T10 dated 20131110
   - examples: add sg_tst_excl3 for testing O_EXCL
     - improve sg_tst_excl and sg_tst_excl2
+    - add sg_tst_context for testing file handle contexts
   - upgrade automake to version 1.13.3
 
 Changelog for sg3_utils-1.37 [20131014] [svn: r522]
